[package]
name = "nonebot-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.2"

[dependencies.tracing]
version = "0.1"
features = ["std"]

[dependencies.axum]
version = "0.1.3"
features = ["ws"]

[dependencies.tokio]
version = "1.10.0"
features = ["macros", "rt-multi-thread"]
