[package]
name = "nonebot-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.2"
headers = "0.3.4"
serde_json = "1.0.66"
http = "0.2.4"
lazy_static = "1.4.0"
chrono = "0.4.19"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing]
version = "0.1"
features = ["std"]

[dependencies.axum]
version = "0.1.3"
features = ["ws", "headers"]

[dependencies.tokio]
version = "1.10.0"
features = ["macros", "rt-multi-thread"]
