[package]
name = "nbrs_lua"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nonebot_rs = { path = "../nonebot_rs" }
tokio = "1.10.0"

[dependencies.mlua]
version = "0.6"
features = ["lua54", "serialize", "vendored", "async"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
