[package]
name = "nonebot_rs"
license = "MIT"
description = "A Onebot SDK in Rust"
homepage = "https://github.com/abrahum/nonebot-rs"
authors = ["Abrahum Link<307887491@qq.com>"]
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pyo = ["pyo3"]
matcher = []
scheduler = ["tokio-cron-scheduler"]

[dependencies]
tracing-subscriber = "0.2"
headers = "0.3.4"
serde_json = "1.0.66"
http = "0.2.4"
lazy_static = "1.4.0"
chrono = "0.4.19"
toml = "0.5.8"
async-trait = "0.1.51"
colored = "2.0.0"
rcnb-rs = "0.1.0"

[dependencies.pyo3]
version = "0.14.2"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing]
version = "0.1"
features = ["std"]

[dependencies.axum]
version = "0.1.3"
features = ["ws", "headers"]

[dependencies.tokio]
version = "1.10.0"
features = ["macros", "rt-multi-thread"]

[dependencies.futures-util]
version = "0.3.14"
features = ["sink"]

[dependencies.tokio-cron-scheduler]
version = "0.2"
optional = true
