[package]
name = "nonebot_rs"
license = "MIT"
description = "A Onebot SDK in Rust"
homepage = "https://github.com/abrahum/nonebot-rs"
authors = ["Abrahum Link<307887491@qq.com>"]
version = "0.3.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
matcher = ["rcnb-rs"]
scheduler = ["tokio-cron-scheduler"]

[dependencies]
tracing-subscriber = "0.2"
headers = "0.3.4"
serde_json = "1.0.66"
http = "0.2.4"
chrono = "0.4.19"
toml = "0.5.8"
async-trait = "0.1.51"
async-recursion = "0.3.2"
colored = "2.0.0"
rcnb-rs = { version = "0.1.0", optional = true }
config = "0.11.0"
tokio-tungstenite = "0.15"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing]
version = "0.1"
features = ["std"]

[dependencies.tokio]
version = "1.10.0"
features = ["macros", "rt-multi-thread", "time", "sync"]

[dependencies.futures-util]
version = "0.3.14"
features = ["sink"]

[dependencies.tokio-cron-scheduler]
version = "0.2"
optional = true
